--- a/yljapp/src/main/res/layout/fragment_common_login.xml
+++ b/yljapp/src/main/res/layout/fragment_common_login.xml
@@ -3,43 +3,27 @@
     android:layout_height="match_parent" tools:context="com.ylj.main.fragment.CommonLoginFragment">
 
     <RelativeLayout
+        android:paddingTop="40dp"
         android:layout_gravity="center"
-        android:layout_width="500dp"
-        android:layout_height="300dp">
+        android:layout_width="420dp"
+        android:layout_height="400dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="user:"/>
-                <EditText
-                    android:id="@+id/et_user"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
 
-            <LinearLayout
+            <ListView
+                android:id="@+id/lv_user"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="passwd:"/>
-                <EditText
-                    android:id="@+id/et_passwd"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+                android:layout_height="200dp">
+
+            </ListView>
 
             <Button
                 android:id="@+id/bt_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:text="login"/>
 
             <Button
@@ -48,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="anonymous login"/>
 
+
         </LinearLayout>
         <TextView
             android:layout_alignParentBottom="true"
@@ -55,7 +40,7 @@
             android:id="@+id/tv_switch_admin_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="admin login"
+            android:text="admin login &gt;"
             android:textSize="24sp"/>
     </RelativeLayout>
 
