--- a/yljapp/src/main/res/layout/listview_manager_staff.xml
+++ b/yljapp/src/main/res/layout/listview_manager_staff.xml
@@ -36,12 +36,14 @@
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:text="edit"/>
     <Button
         android:id="@+id/btn_detele"
         android:layout_toLeftOf="@id/btn_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:text="delete"/>
 </RelativeLayout>
 
