--- a/yljapp/src/main/res/layout/content_staff_manager.xml
+++ b/yljapp/src/main/res/layout/content_staff_manager.xml
@@ -93,13 +93,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="admin list:"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="admin list:"/>
+                <Button
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/btn_add_admin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="add"/>
+            </RelativeLayout>
+
             <ListView
                 android:id="@+id/lv_admin"
-                android:choiceMode="singleChoice"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"/>
 
