--- a/yljapp/src/main/res/layout/content_passwd_modify.xml
+++ b/yljapp/src/main/res/layout/content_passwd_modify.xml
@@ -63,6 +63,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
