--- a/yljapp/src/main/res/layout/activity_user.xml
+++ b/yljapp/src/main/res/layout/activity_user.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.ylj.setting.SettingActivity">
+    tools:context="com.ylj.setting.UserActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -16,6 +16,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_setting" />
+    <include layout="@layout/content_user" />
+
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom" android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
