--- a/yljapp/src/main/res/layout/content_setting.xml
+++ b/yljapp/src/main/res/layout/content_setting.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_setting" tools:context="com.ylj.main.SettingActivity">
+    tools:showIn="@layout/activity_setting" tools:context="com.ylj.setting.SettingActivity">
 
     <ScrollView
         android:layout_centerInParent="true"
