--- a/yljapp/src/main/res/layout/content_user.xml
+++ b/yljapp/src/main/res/layout/content_user.xml
@@ -86,6 +86,13 @@
                         android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_admin_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(adminstation)"
+                        android:visibility="gone"/>
                 </LinearLayout>
 
                 <LinearLayout
