编写task manager基本框架

--- a/yljapp/src/main/res/layout/content_task_modify.xml
+++ b/yljapp/src/main/res/layout/content_task_modify.xml
@@ -34,6 +34,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="save"/>
+                <Button
                     android:id="@+id/btn_save_and_adjust"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
