--- a/yljapp/src/main/res/layout/activity_menu.xml
+++ b/yljapp/src/main/res/layout/activity_menu.xml
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:text="histroy data"
+                android:text="data manager"
                 android:textSize="20sp" />
         </RelativeLayout>
 
