添加修改弹框baseactivty，隐藏软键盘，（输入限制未解决）

--- a/yljapp/src/main/res/layout/layout_task_modify.xml
+++ b/yljapp/src/main/res/layout/layout_task_modify.xml
@@ -65,7 +65,7 @@
                     android:text="origin" />
 
                 <TextView
-                    android:id="@+id/et_origin"
+                    android:id="@+id/tv_origin_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
