实现Adjustactivity、Adjustfragment逻辑（Adjustfragment中图形状态显示保存未完成）

--- a/yljapp/src/main/res/layout/content_task_modify.xml
+++ b/yljapp/src/main/res/layout/content_task_modify.xml
@@ -45,6 +45,18 @@
                     android:text="save and inter adjust"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/layout_enter_adjust"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <Button
+                    android:id="@+id/btn_enter_adjust"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="inter adjust"/>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
