--- a/yljapp/src/main/res/layout/activity_adjust_result.xml
+++ b/yljapp/src/main/res/layout/activity_adjust_result.xml
@@ -1,187 +1,26 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="0dp"
-    android:paddingLeft="50dp"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ylj.adjust.AdjustLightActivity"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    tools:context="com.ylj.adjust.AdjustResultActivity">
 
-    <TextView
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:gravity="center"
-        android:textColor="@color/theme_blue"
-        android:textSize="@dimen/font_fullscreen_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="@string/ad_title_result" />
-    
-    <LinearLayout 
-        android:paddingBottom="30dp"
-        android:paddingTop="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <com.ylj.common.widget.PlotView
-        android:id="@+id/plotview"       
-        android:paddingLeft="0dp"
-    	android:paddingRight="50dp"
-        android:layout_width="600dp"
-    	android:layout_height="330dp"/>        
-    	
-       <LinearLayout 
-        android:paddingBottom="0dp"
-        android:paddingTop="15dp"
-        android:paddingLeft="50dp"
-    	android:paddingRight="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        
-           <LinearLayout 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-        android:textColor="@color/theme_blue"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_r" />
-        <TextView
-            android:id="@+id/rtext"
-        android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        </LinearLayout>
-        
-    <TableLayout 
-        android:focusable="true" 
-        android:focusableInTouchMode="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-        android:textColor="@color/theme_blue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-        <TextView
-        android:textColor="@color/theme_blue"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_equation" />
-        
-        <TableRow >
-        <TextView
-            android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_a" />
-        <TextView
-            android:id="@+id/atext"
-            android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        </TableRow>
-        
-        <TableRow >
-        <TextView
-            android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_b" />
-        <TextView
-            android:id="@+id/btext"
-            android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        </TableRow>
-        
-        <TextView
-        android:textColor="@color/theme_blue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-         <TextView
-        android:textColor="@color/theme_blue"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_promt" />
-         
-         <TableRow >
-         <TextView
-        android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_x" />
-        <EditText
-            android:id="@+id/edittext"
-            android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="70dp"
-        android:numeric="decimal"
-        android:layout_height="wrap_content"/>
-        </TableRow>
-        
-         <TableRow >
-    	<TextView
-        android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ad_result_vcv" />
-        <TextView
-            android:id="@+id/vcvtext"
-        android:textColor="@color/color_ad_result_black"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        </TableRow>
-    </TableLayout>
-    </LinearLayout>
-    </LinearLayout>
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="0dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:id="@+id/text_promt"
-        android:textColor="@color/theme_blue"
-        android:textSize="@dimen/font_ad_result_font"
-        android:layout_width="600dp"
-        android:layout_height="wrap_content"/>
-       
-        <Button 
-            android:id="@+id/button_ok"     
-            android:layout_width="120dp"
-        	android:layout_height="wrap_content"
-        	android:text="@string/ad_ok"
-        	android:textSize="@dimen/font_button"
-        	android:textColor="@color/color_ad_button_font"
-            />
-        <Button 
-            android:id="@+id/button_exit"     
-            android:layout_width="120dp"
-        	android:layout_height="wrap_content"
-        	android:text="@string/ad_exit"
-        	android:textSize="@dimen/font_button"
-        	android:textColor="@color/color_ad_button_font"
-            />
-    </LinearLayout>
+    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
+        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
-</LinearLayout>
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary" android:theme="@style/AppTheme.AppBarOverlay"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_adjust_result" />
+
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom" android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email" />
+
+</android.support.design.widget.CoordinatorLayout>
