--- a/yljapp/src/main/res/layout/fragment_bt_connect.xml
+++ b/yljapp/src/main/res/layout/fragment_bt_connect.xml
@@ -6,19 +6,34 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_width="400dp"
-        android:layout_height="300dp">
+        android:layout_height="330dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/hello_blank_fragment" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="bluetooth state" />
             <Switch
                 android:id="@+id/switch_bluetooth"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="device list"/>
+            <Button
+                android:id="@+id/btn_refresh"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="refresh"/>
         </RelativeLayout>
 
         <ListView
