--- a/yljapp/src/main/res/layout/fragment_device_info.xml
+++ b/yljapp/src/main/res/layout/fragment_device_info.xml
@@ -149,6 +149,12 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/bt_sensor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sensor" />
+
+        <Button
             android:id="@+id/bt_resent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
